# GeminiReder

./: .gitignore  FEATURE_ROADMAP.md  ZCODE_DESKTOP_APP_DEVELOPMENT_PLAN.md  ZCODE_DESKTOP_READER_PLAN.md  index.html  package-lock.json  package.json  start.bat  start.ps1  start.sh  tailwind.config.js  vite.config.js  zcode-start.bat  zcode-start.ps1
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_theme.js  lib.rs  main.rs
src/assets/: zcode.css
src/components/: ArticleWriterPanel.vue  BookCard.vue  BookLibrary.vue  BookmarkPanel.vue  ClassicReaderShell.vue  FontSettings.vue  TableOfContents.vue
src/components/reader/: EpubReader.vue
src/components/zcode/: ZCodeActivityBar.vue  ZCodeBrowserSurface.vue  ZCodeCommandBox.vue  ZCodeProgressPanel.vue  ZCodeReaderSurface.vue  ZCodeShell.vue  ZCodeSidebar.vue  ZCodeTitleBar.vue
src/composables/: useEpubReader.js
src/stores/: bookStore.js
