[package]
name = "zcode-reader"
version = "0.1.0"
description = "Personal desktop EPUB reader with a ZCode-style workbench shell"
authors = ["ME"]
edition = "2021"

[lib]
name = "zcode_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = []
